[package]
name = "hyperbloomlib"
version = "0.1.0"
description = "Hyperbloom application library"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/HyperboreaHQ/hyperbloomlib"
repository = "https://github.com/HyperboreaHQ/hyperbloomlib"
license = "GPL-3.0"
edition = "2021"

[dependencies.hyperborealib]
git = "https://github.com/HyperboreaHQ/hyperborealib"

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# History
seahash = "4.1.0"
